ta said this is close

--- a/src/localization/particle_filter.txt
+++ b/src/localization/particle_filter.txt
@@ -241,7 +241,7 @@ class ParticleFilter:
         """ Publish a transform between the map and the base_link frome of the given pose. """
         # Publish this "average" pose as a transform between the map and the car's expected base_link
         odom = Odometry()
-        odom.header.frame_id = '/map'
+        odom.header.frame_id = self.particle_filter_frame
         odom.header.stamp = rospy.Time.now()
         odom.pose.pose.position.x = avg_pose[0]
         odom.pose.pose.position.y = avg_pose[1]
